style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet');
*{
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
    line-height: 1.05;
    letter-spacing: -.003em;
    font-size: 14px;
  }
  
h1 {
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    font-style: bold;
    font-size: 38px;
    line-height: 1.15;
    letter-spacing: -.02em;
    -webkit-font-smoothing: antialiased;
  }

a {
    text-decoration:none;
    color:white;
  }



button {
    background: none;
	color: none;
	border: none;
	padding: 0;
	cursor: pointer;
	outline: none;
    font: inherit;
}

.registerButton{
    padding: 0.25em 0.5em;
    background-color: crimson;
    border-color:crimson;
    color: white;
    border-radius: 1em 1em; /* rounded corner */
}

.registerButton:hover{
    text-decoration: underline;
}
.submitButton{
    padding: 0.5em 1.5em;
    background-color: crimson;
    border-color:crimson;
    color: white;
    border-radius: 1em 1em; /* rounded corner */
}

.submitButton:hover{
    text-decoration: underline;
}

main {
    background-color: cornsilk;
}

header{
    background: url(assets/sg-vol.jpg) no-repeat center center;
    background-size:cover;
    width:100%;
    text-align: center;
    color:white;
    padding-bottom: 75px;
    transition-property: background;
    transition-duration: 4s;
}

header:hover{
    filter: grayscale(100%);
}

header h1{
    padding:10% 5% 1% 5%;
    font-size: 50px;
    text-shadow: 2px 2px #808080;
    transition-duration: 4s;
}

header h1:hover{
    padding:10% 5% 1% 5%;
    font-size: 55px;
    text-shadow: 2px 2px #808080;
}

nav {
    position:fixed;
    padding-top: 15px; 
    padding-bottom: 15px;
    padding-right: 15px;
    width: 100%;
    float:right;
    background-color:black;
    z-index:1;
}

nav ul {
    list-style-type: none;
  }

nav ul li {
    float: right;
    margin-right: 0.5em;
  }

nav ul li a {
    padding: 0.25em 1em;
    text-decoration: none;
    color:white; 
    border-radius: 1em 1em;
  }

  nav ul li a:hover {
    background-color:white;
    color:black; 
  }

section {
    padding-top: 5%;
    padding-bottom:5%;
}

section>h2{
    padding-bottom: 3%;
    text-align: center;
}

section table {
    border-collapse: collapse;
    width: 100%;
    }
section th, td{
    padding: 8px;
    text-align: center;
    border-right: 1px solid #DDD;
    }

@media (max-width: 800px){
    .menu{
        width:90%;
        height: min-content;
        padding-left:5%;
        padding-bottom:5%;
        display:flex;
        flex-direction: column;
        justify-content: center;
        gap: 5px 10px;
        
    }
    
    .events{
        height: min-content;
        display:flex;
        flex-direction: row;
        padding: 3px 3px;
        flex-grow:1;
    }
    
    .events:hover{
        border: 2px solid blanchedalmond;
    }
        .logo{
            flex:30%;
            background-color: cornsilk;
            align-content: center;
            text-align: center;
        }

        .description{
            line-height: 1.5;
            flex:70%;
            margin-left: 10px;
            align-content: center;
            text-align: left;
        }

    .container {
        padding-top: 20px;
        width:100%;
        height: min-content;
        justify-content: center;
    }
        .regist-form{
            background-color: cornsilk;
            padding-bottom: 20px;
            padding-left: 50px;
            align-content: center;
            justify-content:center;
        }
              
        .video-ipa {
            background-color: black;
            align-content: center;
            text-align: center;
            color:white;
            font-weight: bold;
            font-size: small;
            padding: 30px 10px;
        }

        .featured {
            padding-bottom: 0.1vw;
            padding-left:6vw;
            width: 85%;
            display:flex;
            flex-direction: column;
            height:max-content;
        }
        .snapshots{
            flex: 30%;
            height: max-content;
            display: flex;
            flex-direction:row;
        }
        .prayer1{
            flex: 50%;
            overflow: hidden;
        }
        
        .prayer2{
            flex: 50%;
            overflow: hidden;
        }

        .prayer1 img{
            width:100%;
            height: auto;
            display:block;
        }

        .prayer2 img{
            width:100%;
            height: auto;
            display:block;
        }

        .others{
            width: 95%;
            padding-left:6vw;
            display: grid;
            grid-template-columns: repeat(2,minmax(0,1fr))
            grid-template-rows: repeat(auto-fit,minmax(0,1fr));
            grid-auto-flow: row;
            grid-gap: 20px;
        }
        
        .snip{
            margin-top: 10px;
            margin-bottom: 10px;
        }
        
        .snip:hover{
        background: floralwhite;
        }
        
        .snip>h3:hover{
        text-decoration: underline;
        cursor: pointer;
        }
        
        .snip1{
        grid-column-start:1;
        grid-column-end:3;
        }

    }

@media (min-width: 800px){
    .menu {
        width:90%;
        height: min-content;
        padding-left:5%;
        padding-bottom:5%;
        display:flex;
        flex-direction: row;
        flex-wrap:nowrap;
        gap: 10px 20px;
        justify-content: center;
    }
    
    .events{
        width: 100%;
        height: min-content;
        padding: 3px 3px;
        display:flex;
        flex-direction: column;
        flex-grow:1;
    }
    
    .events:hover{
        border: 2px solid blanchedalmond;
    }
        .logo{
            flex:30%;
            background-color: cornsilk;
            align-content: center;
            text-align: center;
            padding-top:10%;
        }
    
        .description{
            line-height: 1.5;
            flex:70%;
            align-content: top;
            text-align: left;
        }
        .container {
            padding-top: 20px;
            width:100%;
            height: min-content;
            display: flex;
        }
            .regist-form{
                flex: 32%;
                background-color: cornsilk;
                padding:2% 5%;
            }
                  
            .video-ipa {
                background-color:black;
                flex: 68%;
                align-content: center;
                text-align: center;
                color:white;
                font-weight: bold;
                font-size: small;
                width: 250px;
            }
            .featured {
                padding-bottom: 0.1vw;
                width: 95%;
                display:flex;
                flex-direction: row;
                height:max-content;
            }
            .snapshots{
                flex: 30%;
                margin-bottom: 0.2vw;
                padding-left: 4vw;
            }
            .content{
                flex: 70%;
            }
            
            .content:hover{
                background-color:floralwhite;
                }
                
            .content>h2:hover{
                text-decoration: underline;
                cursor: pointer;
                }
            
            
            .prayer1{
                position: absolute;
            }
            
            .prayer2{
                position: absolute;
                animation: fade 7s infinite;
                
            }
            
            @keyframes fade{
                0% {opacity: 1}
                25% {opacity: 0.75}
                25.25% {opacity: 0.5}
                25.5% {opacity: 0.25}
                25.75% {opacity: 0}
                74% {opacity: 0}
                74.5 {opacity: 0.25}
                75% {opacity: 0.5}
                75.5% {opacity: 0.75}
                80% {opacity: 1}
            }
            .others{
                width: 95%;
                padding-left:35px;
                padding-right: 35px;
                display: grid;
                grid-template-columns: repeat(4,minmax(0,1fr))
                grid-template-rows: repeat(auto-fit,minmax(0,1fr));
                grid-auto-flow: row;
                grid-gap: 20px;
            }
            

            .snip{
                margin: 10px;
            }
            
            .snip:hover{
            background: floralwhite;
            }
            
            .snip>h3:hover{
            text-decoration: underline;
            cursor: pointer;
            }
            
            .snip1{
            grid-column-start:1;
            grid-column-end:4;
            }
        
        }
    


form>h2{
    text-align: center;
    margin-top: 5%;
    margin-bottom: 5%;
}

label,input[type=text]{
    display: flex;
    flex-direction: column;
}

label{
    text-align: left;
    color:black;
    font-weight: bold;
    font-size: small;
    width: 300px;
    padding-top:2%;
}

input[type=text]{
    border: none;
    border-radius: 0.5em 0.5em;
    padding: 1% 1%;
    margin-bottom: 1%;
    width: 300px;
    height: 2em;
    text-align: left center;
    background:lightgrey;
    color:black
}

form ul {
    list-style-type: none;
    padding-top: 0.5%;
    padding-bottom: 1%;
  }

form ul li{
    font-weight: bold;
    font-size: small;
}

textarea{
    margin-top:1%;   
    margin-bottom:1%;
}

section>h2{
    text-align: center;
    transition-duration: 4s;
}

section>h2:hover{
    font-size: 40px;
}

article>h2{
    text-align: center;
    transition-duration: 4s;
}

article>h2:hover{
    font-size: 40px;
}

